--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,9 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
+#header{
+	text-align:center;
+}
 
 
 
