Added new view for products

--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,13 @@ textarea {
 #mainScreen {
 	width: 500px;
 	margin-left: 40px;
+	float:left;
+}
+
+#productScreen {
+	width: 500px;
+	margin-right: 40px;
+	float:right;
 }
 
 table th {
